version/0.3/_sources/examples/index.rst.txt
:orphan:

.. _gallery:

========
Examples
========

End-to-end examples show how you can use PyDPF-Post. If PyDPF-Post is installed
on your machine, you can download these examples as Python files or Jupyter
notebooks and run them locally.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


PyDPF-Post analysis types
~~~~~~~~~~~~~~~~~~~~~~~~~
These examples show how to post-process different simulation types using PyDPF-Post.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Static Simulation">

.. only:: html

  .. image:: /examples/00-Different-analysis-types/images/thumb/sphx_glr_01-static-simulation_thumb.png
    :alt: Static Simulation

  :ref:`sphx_glr_examples_00-Different-analysis-types_01-static-simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modal Simulation">

.. only:: html

  .. image:: /examples/00-Different-analysis-types/images/thumb/sphx_glr_02-modal-simulation_thumb.png
    :alt: Modal Simulation

  :ref:`sphx_glr_examples_00-Different-analysis-types_02-modal-simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modal Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Transient Simulation with Animation">

.. only:: html

  .. image:: /examples/00-Different-analysis-types/images/thumb/sphx_glr_03-transient-simulation_thumb.png
    :alt: Transient Simulation with Animation

  :ref:`sphx_glr_examples_00-Different-analysis-types_03-transient-simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Transient Simulation with Animation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Harmonic Simulation">

.. only:: html

  .. image:: /examples/00-Different-analysis-types/images/thumb/sphx_glr_04-harmonic-complex-results_thumb.png
    :alt: Harmonic Simulation

  :ref:`sphx_glr_examples_00-Different-analysis-types_04-harmonic-complex-results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Harmonic Simulation</div>
    </div>


.. raw:: html

    </div>


PyDPF-Post feature examples
~~~~~~~~~~~~~~~~~~~~~~~~~~~
These examples show how you use PyDPF-Post features.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract results on named selections - Modal Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_01-named-selections-modal-simulation_thumb.png
    :alt: Extract results on named selections - Modal Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_01-named-selections-modal-simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract results on named selections - Modal Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract components of results - Modal Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_02-modal-extract-sub-results_thumb.png
    :alt: Extract components of results - Modal Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_02-modal-extract-sub-results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract components of results - Modal Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Explore the data of a result with the DataFrame - Harmonic Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_03-explore-result-data-harmonic_thumb.png
    :alt: Explore the data of a result with the DataFrame - Harmonic Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_03-explore-result-data-harmonic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Explore the data of a result with the DataFrame - Harmonic Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Extract stress/strain invariants - Static Simulation">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_04-invariants_thumb.png
    :alt: Extract stress/strain invariants - Static Simulation

  :ref:`sphx_glr_examples_01-Detailed-Examples_04-invariants.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Extract stress/strain invariants - Static Simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Export data contained in a DataFrame to a new format">

.. only:: html

  .. image:: /examples/01-Detailed-Examples/images/thumb/sphx_glr_05-export_data_thumb.png
    :alt: Export data contained in a DataFrame to a new format

  :ref:`sphx_glr_examples_01-Detailed-Examples_05-export_data.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Export data contained in a DataFrame to a new format</div>
    </div>


.. raw:: html

    </div>


PyDPF-Post legacy examples
~~~~~~~~~~~~~~~~~~~~~~~~~~
These examples show how you use the legacy PyDPF-Post API.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PyDPF-Post overview">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_00-overview_example_thumb.png
    :alt: PyDPF-Post overview

  :ref:`sphx_glr_examples_02-Legacy_00-overview_example.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PyDPF-Post overview</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Get data from static simulation">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_01-get_data_from_static_simulation_thumb.png
    :alt: Get data from static simulation

  :ref:`sphx_glr_examples_02-Legacy_01-get_data_from_static_simulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Get data from static simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_01-introduction_thumb.png
    :alt: Introduction

  :ref:`sphx_glr_examples_02-Legacy_01-introduction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Static analysis">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_02-static-analysis_thumb.png
    :alt: Static analysis

  :ref:`sphx_glr_examples_02-Legacy_02-static-analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Static analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modal analysis">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_03-modal-analysis_thumb.png
    :alt: Modal analysis

  :ref:`sphx_glr_examples_02-Legacy_03-modal-analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Modal analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Harmonic analysis">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_04-harmonic-analysis_thumb.png
    :alt: Harmonic analysis

  :ref:`sphx_glr_examples_02-Legacy_04-harmonic-analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Harmonic analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Transient analysis">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_05-transient-analysis_thumb.png
    :alt: Transient analysis

  :ref:`sphx_glr_examples_02-Legacy_05-transient-analysis.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Transient analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Complex results from a modal or harmonic analysis">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_06-complex_results_thumb.png
    :alt: Complex results from a modal or harmonic analysis

  :ref:`sphx_glr_examples_02-Legacy_06-complex_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Complex results from a modal or harmonic analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Result keywords">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_07-result_keywords_thumb.png
    :alt: Result keywords

  :ref:`sphx_glr_examples_02-Legacy_07-result_keywords.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Result keywords</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Request result on a specific path">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_08-result_on_path_of_coordinates_thumb.png
    :alt: Request result on a specific path

  :ref:`sphx_glr_examples_02-Legacy_08-result_on_path_of_coordinates.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Request result on a specific path</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic features">

.. only:: html

  .. image:: /examples/02-Legacy/images/thumb/sphx_glr_09-basics_thumb.png
    :alt: Basic features

  :ref:`sphx_glr_examples_02-Legacy_09-basics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Basic features</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /examples/00-Different-analysis-types/index.rst
   /examples/01-Detailed-Examples/index.rst
   /examples/02-Legacy/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
